--- a/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
@@ -1,9 +1,9 @@
 {% load i18n %}
 {% load url from future %}
 
-<div style="text-align:center;">
+<div style="text-align:center;color:#333333;">
     <div style="text-align:center;">
-        <h1>What is daisy?</h1>
+        <h2>What is daisy?</h2>
     </div>
     <p><h3>Automate your Deployment and Management</h3></p>
     <p>
