--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -3,11 +3,11 @@
 
 <div id="_section2">
     <div style="text-align:center;color:#333333;">
-        <h1>Structure & Features</h1>
+        <h2>Structure & Features</h2>
     </div>
     <div>
       <div class="col-md-6" style="padding-left:100px;">
-        <div style="font-size:14px;color:#0e7b65;padding-top:20px;">
+        <div style="font-size:20px;color:#0e7b65;padding-top:20px;">
             three-layer Modules
         </div>
         <p style="padding-top:20px;font-size:12px;">
@@ -33,18 +33,38 @@
         </p>
       </div>
       <div class="col-md-5" style="padding-left:50px;">
-        <div style="font-size:14px;color:#0e7b65;padding-top:20px;padding-left:30px;">
+        <div style="font-size:20px;color:#0e7b65;padding-top:20px;padding-left:30px;">
             key features
         </div>
-        <div style="font-size:12px;padding-top:30px;">
+        <div style="font-size:14px;padding-top:30px;">
             <ul>
-            <p><li>hardware discovery</li></p>
-            <p><li>Automating Distributed Systems Deployment to Baremetal</li></p>
-            <p><li>support Deployment and upgrade for multiple OpenStack distributions</li></p>
-            <p><li>support Deployment and upgrade for SDN</li></p>
-            <p><li>support Deployment and upgrade for Ceph</li></p>
-            <p><li>support for template function</li></p>
-            <p><li>support for  auto scale</li></p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                hardware discovery
+            </p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                Automating Distributed Systems Deployment to Baremetal
+            </p>
+            <p><img src="./static/img/dot_grey.PNG">
+                support Deployment and upgrade for multiple OpenStack distributions
+            </p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                support Deployment and upgrade for SDN
+            </p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                support Deployment and upgrade for Ceph
+            </p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                support for template function
+            </p>
+            <p>
+                <img src="./static/img/dot_grey.PNG">
+                support for  auto scale
+            </p>
           </ul>
         </div>
       </div>
