--- a/myDaisyCloud/mysite/daisycloud/templates/footer.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/footer.html
@@ -1,9 +1,12 @@
 {% load i18n %}
 {% load url from future %}
 
-<div style="height:100px;background:#172602;">
-     <div style="padding-left:400px;padding-top:15px;">
-         <h3> Related Links:</h3>
-         <a>link to daisy4nfv</a>
+<div style="height:200px;background:#172602;">
+     <div style="text-align:center;padding-top:30px;">
+         <img src="./static/img/daisya.png" height="50px">
+         <div style="font-size:24px;padding-top:5px;color:#e7e7e7;">
+             Related Links
+         </div>
+         <a style="color:#e7e7e7;">link to daisy4nfv</a>
      </div>
 </div>
