--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -3,14 +3,14 @@
 
 <div class="row">
     <div class="col-md-4" style="margin-top:10px;">
-        <h1 style="color:rgb(107, 194, 63);">Following steps:</h1>
+        <h2 style="color:rgb(107, 194, 63);">Following steps:</h2>
         <div style="padding-left:70px;padding-top:10px;">
             <img src="./static/img/download.ico">
         </div>
     </div>
     <div class="col-md-8">
       <div style="margin-top:40px;">
-        <h2 style="color:rgb(126, 194, 119);">Get Daisy ISO</h2>
+        <h3 style="color:rgb(126, 194, 119);">Get Daisy ISO</h3>
         <div style="border:4px solid #e7edef; border-radius:15px; text-align:center;padding: 20px;width:600px;height:100px;margin-bottom:5px;">
             <div style="font-size:22px;">
                 Daisy-community-1.0
@@ -32,10 +32,10 @@
         </div>
       </div>
       <div style="margin-top:35px;">
-        <h2 style="color:rgb(126, 194, 119);">Get Openstack ISO</h2>
+        <h3 style="color:rgb(126, 194, 119);">Get Openstack ISO</h3>
         <div  class="downloadbox">
             <div style="font-size:22px;">
-                Openstack-community-K
+                Openstack-community-M
             </div>
             <p>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div style="margin-top:35px;">
-        <h2 style="color:rgb(126, 194, 119);">Get OS ISO</h2>
+        <h3 style="color:rgb(126, 194, 119);">Get OS ISO</h3>
         <div class="downloadbox">
             <div style="font-size:22px;">
                 Ubuntu-community-1.0
