--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -76,7 +76,7 @@
         </div>
       <div class="col-md-8" style="margin-top:60px;align:center;padding-left:200px;text-align:center;">
         <div style="font-size:20px;color:#0e7b65;padding-bottom:20px;">
-            look at a typical deployment vedio:</h3>
+            look at a typical deployment video</h3>
         </div>
         <p>
             <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf" allowFullScreen="true" quality="high" width="680" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
