--- a/myDaisyCloud/mysite/daisycloud/templates/footer.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/footer.html
@@ -2,11 +2,16 @@
 {% load url from future %}
 
 <div style="height:200px;background:#172602;">
-     <div style="text-align:center;padding-top:30px;">
-         <img src="./static/img/daisya.png" height="50px">
-         <div style="font-size:24px;padding-top:5px;color:#e7e7e7;">
-             Related Links
-         </div>
-         <a style="color:#e7e7e7;">link to daisy4nfv</a>
-     </div>
+    <div style="text-align:center;padding-top:30px;">
+        <img src="./static/img/daisya.png" height="50px">
+        <div style="font-size:24px;padding-top:5px;color:#e7e7e7;">
+            Related Links
+        </div>
+        <div><a style="color:#e7e7e7;">link to daisy4nfv</a></div>
+        <div style="color:#e7e7e7;padding-top:20px;">
+            <a href="http://www.miitbeian.gov.cn/" >
+                苏ICP备16019405号
+            </a>
+        </div>
+    </div>
 </div>
