--- a/myDaisyCloud/mysite/daisycloud/templates/header.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/header.html
@@ -1,6 +1,13 @@
 {% load i18n %}
 {% load url from future %}
 
+<style>
+    .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse
+    .navbar-nav > .active > a:hover {
+        color: #fdd002;
+    }
+</style>
+
 <nav class="navbar navbar-inverse navbar-fixed-top daisy_nav">
   <div class="container-fluid" style="padding-left:42px;padding-bottom:1px;">
     <div class="navbar-heade">
