--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -16,7 +16,7 @@
       height:70px
   }
   #top_img  {
-      background-color: black;
+      background-color: #172602;
       }
   #section1 {
       padding-top:80px;
