change for mobile

--- a/myDaisyCloud/mysite/daisycloud/templates/api.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/api.html
@@ -19,13 +19,16 @@
     }
 </style>
 
-<div id="api_about" style="width:1000px;">
-    <h2 style="color:#333333;text-align:center;">
-        REST-FUL API
-    </h2>
+<div id="api_about" class="container">
+    <div class="row" style="text-align:center;color:#333333;">
+        <h2>
+            REST-FUL API
+        </h2>
+    </div>
     <div class="api_level_two">
         Daisy provide standard RestFul interface
     </div>
+    <div class="row">
     <div id="api_header" class="col-md-4">
         <div style="padding-top:30px;font-size:16px;text-align:left;" class="col-md-5 col-md-offset-3">
             <ul class="nav nav-pills nav-stacked">
@@ -43,7 +46,7 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-8" style="margin-top:30px;">
+      <div class="col-md-8" style="margin-top:30px;">
         <table class="table table-bordered" id="_Install">
             <th>Install</th>
             <tr>
@@ -145,6 +148,7 @@
                 </td>
             </tr>
         </table>
+      </div>
     </div>
 </div>
 
