--- a/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
@@ -1,22 +1,28 @@
 {% load i18n %}
 {% load url from future %}
 
-<div style="text-align:center;color:#333333;">
-    <div style="text-align:center;">
-        <h2>What is daisy?</h2>
+<div class="row" style="text-align:center;color:#333333;">
+    <div class="col-xs-12 col-sm-6 col-md-8 col-md-offset-2">
+        <div style="text-align:center;">
+            <h2>What is daisy?</h2>
+        </div>
+        <div><h3>Automate your Deployment and Management</h3></div>
+        <div>
+          Daisy is an open source deployment and management tool for OpenStack.
+          Developed as an OpenStack community effort, it provides an intuitive,
+          GUI-driven experience for deployment and management of OpenStack,
+          related community projects and plug-ins.
+        </div>
     </div>
-    <p><h3>Automate your Deployment and Management</h3></p>
-    <p>
-      Daisy is an open source deployment and management tool for OpenStack.
-      Developed as an OpenStack community effort, it provides an intuitive,
-      GUI-driven experience for deployment and management of OpenStack,
-      related community projects and plug-ins.
-    </p>
-    <p style="margin-top:35px;">
-        <img src="./static/img/daisy_frame.png">
-    </p>
-    <a type="button" class="btn btn-large" href="#section2"
-            style="width:132px;height:45px;margin-top:30px;padding-top:10px;background:#fdd002;color:#333333;">
-        Learn more
-    </a>
+    <div class="col-xs-12 col-sm-6 col-md-8 col-md-offset-2">
+        <div style="margin-top:35px;">
+            <img src="./static/img/daisy_frame.png">
+        </div>
+        <div>
+            <a type="button" class="btn btn-large" href="#section2"
+              style="width:132px;height:45px;margin-top:30px;padding-top:10px;background:#fdd002;color:#333333;">
+                Learn more
+            </a>
+        </div>
+    </div>
 </div>
