--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 {% load url from future %}
 
-<div id="_section2">
-    <div style="text-align:center;color:#333333;">
+<div id="_section2" class="container">
+    <div class="row" style="text-align:center;color:#333333;">
         <h2>Structure & Features</h2>
     </div>
-    <div>
-      <div class="col-md-6" style="padding-left:100px;">
+    <div class="row">
+        <div class="col-md-6" style="padding-left:100px;">
         <div style="font-size:20px;color:#0e7b65;padding-top:20px;">
             three-layer Modules
         </div>
@@ -32,7 +32,7 @@
             </p>
         </p>
       </div>
-      <div class="col-md-5" style="padding-left:50px;">
+        <div class="col-md-5" style="padding-left:50px;">
         <div style="font-size:20px;color:#0e7b65;padding-top:20px;padding-left:30px;">
             key features
         </div>
@@ -74,13 +74,17 @@
                 For more detail
             </a>
         </div>
-      <div class="col-md-8" style="margin-top:60px;align:center;padding-left:200px;text-align:center;">
-        <div style="font-size:20px;color:#0e7b65;padding-bottom:20px;">
-            look at a typical deployment video</h3>
+    </div>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2" style="margin-top:60px;align:center;text-align:center;">
+            <div style="font-size:20px;color:#0e7b65;padding-bottom:20px;">
+                look at a typical deployment video</h3>
+            </div>
+            <div>
+              <p>
+                <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf" allowFullScreen="true" quality="high" width="80%" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+              </p>
+            </div>
         </div>
-        <p>
-            <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf" allowFullScreen="true" quality="high" width="680" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
-        </p>
-      </div>
     </div>
 </div>
