--- a/myDaisyCloud/mysite/daisycloud/templates/footer.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/footer.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 
-<div style="height:200px;background:#172602;">
+<div  style="height:200px;overflow:hidden;background:#172602;">
     <div style="text-align:center;padding-top:30px;">
         <img src="./static/img/daisya.png" height="50px">
         <div style="font-size:24px;padding-top:5px;color:#e7e7e7;">
