--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-
+<div class="container">
 <div class="row">
     <div class="col-md-4" style="margin-top:10px;">
         <h2 style="color:rgb(107, 194, 63);">Following steps:</h2>
@@ -11,23 +11,25 @@
     <div class="col-md-8">
       <div style="margin-top:40px;">
         <h3 style="color:rgb(126, 194, 119);">Get Daisy ISO</h3>
-        <div style="border:4px solid #e7edef; border-radius:15px; text-align:center;padding: 20px;width:600px;height:100px;margin-bottom:5px;">
+        <div class="downloadbox">
             <div style="font-size:22px;">
                 Daisy-community-1.0
             </div>
-            <div style="padding-left:135px;float:left;">
+            <div class="row">
+              <div class="col-md-2 col-md-offset-2" >
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
                     <a href="./static/files/Daisy.7z">
                         get&nbsp;&nbsp; Release
                     </a>
                 </span>
-            </div>
-            <div style="padding-left:80px;float:left;">
+              </div>
+              <div>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
                     <a href="./static/files/Daisy.7z">
                         config & deploy doc
                     </a>
                 </span>
+            </div>
             </div>
         </div>
       </div>
@@ -59,5 +61,5 @@
       </div>
     </div>
 </div>
-
+</div>
 
