--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -58,7 +58,8 @@
       text-align: center;
       padding: 20px;
       width:80%;
-      height:100px;
+      height:auto!important;
+      min-height:100px;
       margin-bottom:5px;
       }
   </style>
