--- a/myDaisyCloud/mysite/daisycloud/templates/top.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/top.html
@@ -51,7 +51,7 @@
             padding-left:25px;">
               <a style="color:#dfe0de;"
                  href="https://github.com/openstack/daisycloud-core">
-                  Glone code
+                  Clone code
               </a>
           </div>
       </div>
