change img size

--- a/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
@@ -16,7 +16,7 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-8 col-md-offset-2">
         <div style="margin-top:35px;">
-            <img src="./static/img/daisy_frame.png">
+            <img src="./static/img/daisy_frame.png" class="img-responsive">
         </div>
         <div>
             <a type="button" class="btn btn-large" href="#section2"
