--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -13,7 +13,8 @@
   }
   .daisy_nav {
       background:#172602;
-      height:70px
+      height:auto!important;
+      min-height:70px;
   }
   #top_img  {
       background-color: #172602;
