--- a/myDaisyCloud/mysite/daisycloud/templates/joinin.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/joinin.html
@@ -3,7 +3,8 @@
 
 <style>
     .joinIn_bg {
-        height:400px;
+        height:auto!important;
+        min-height:400px;
         background-image:url(./static/img/doubt.png);
         background-repeat: no-repeat;
         background-position:right;
