--- a/myDaisyCloud/mysite/daisycloud/templates/top.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/top.html
@@ -4,7 +4,6 @@
 <style>
     .top_bg {
         color: white;
-        margin-top: 70px;
         height:auto!important;
         min-height: 476px;
         width:100%;
@@ -26,9 +25,9 @@
         }
 </style>
 
-<div >
+<div class=container">
 <div class="row top_bg">
-      <div class="col-md-3 col-md-offset-2" style="padding-top:90px;">
+      <div class="col-md-3 col-md-offset-2" style="margin-top:90px;">
           <h1 style="font-size:56px;color:#fdd002">
               <b>Daisy</b>
           </h1>
