--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -80,10 +80,21 @@
             <div style="font-size:20px;color:#0e7b65;padding-bottom:20px;">
                 look at a typical deployment video</h3>
             </div>
-            <div>
+            <!--div>
               <p>
-                <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf" allowFullScreen="true" quality="high" width="80%" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+                <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf"
+                       allowFullScreen="true"
+                       quality="high" width="80%" height="400" align="middle"
+                       allowScriptAccess="always" type="application/x-shockwave-flash">
+                </embed>
               </p>
+            </div-->
+            <div>
+                <video id="youku-html5-player-video" width="100%"
+                       height="100%" x-webkit-airplay="allow" controls=""
+                       autoplay="" preload=""
+                       src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf">
+                </video>
             </div>
         </div>
     </div>
