alert not realized

--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -18,14 +18,14 @@
             <div class="row">
               <div class="col-md-2 col-md-offset-2" >
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
-                    <a href="./static/files/Daisy.7z">
+                    <a id="daisy_release_get_a" onmousemove="alert('We are still working on it. comming soon!')">
                         get&nbsp;&nbsp; Release
                     </a>
                 </span>
               </div>
               <div>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
-                    <a href="./static/files/Daisy.7z">
+                    <a onmousemove="alert('We are still working on install guide document. comming soon!')">
                         config & deploy doc
                     </a>
                 </span>
@@ -63,3 +63,6 @@
 </div>
 </div>
 
+<script>
+
+</script>
