--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -72,7 +72,7 @@
         {% include 'header.html' %}
     </div>
 
-    <div id="top_img" class="container-fluid">
+    <div id="top_img" class="">
         {% include 'top.html' %}
     </div>
 
