--- a/myDaisyCloud/mysite/daisycloud/templates/top.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/top.html
@@ -5,6 +5,7 @@
     .top_bg {
         color: white;
         height:auto!important;
+        padding-top:80px;
         min-height: 476px;
         width:100%;
         background-image: url(./static/img/daisy_bg.png);
@@ -25,9 +26,9 @@
         }
 </style>
 
-<div class=container">
-<div class="row top_bg">
-      <div class="col-md-3 col-md-offset-2" style="margin-top:90px;">
+<div class="">
+<div class=" top_bg">
+      <div class="col-md-3 col-md-offset-2" style="margin-top:18px;">
           <h1 style="font-size:56px;color:#fdd002">
               <b>Daisy</b>
           </h1>
