--- a/myDaisyCloud/mysite/daisycloud/templates/footer.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/footer.html
@@ -1,13 +1,18 @@
 {% load i18n %}
 {% load url from future %}
 
-<div  style="height:200px;overflow:hidden;background:#172602;">
-    <div style="text-align:center;padding-top:30px;">
+<div  style="height:auto!important;min-height: 200px;overflow:hidden;background:#172602;">
+    <div style="text-align:center;padding-top:30px;padding-bottom:30px;">
         <img src="./static/img/daisya.png" height="50px">
         <div style="font-size:24px;padding-top:5px;color:#e7e7e7;">
             Related Links
         </div>
         <div><a style="color:#e7e7e7;">link to daisy4nfv</a></div>
+		<div>
+		    <a style="color:#e7e7e7;" href="http://www.daisycloud.org:9091/">
+			    link to CEPH qa results
+			</a>
+		</div>
         <div style="color:#e7e7e7;padding-top:20px;">
             <a href="http://www.miitbeian.gov.cn/" >
                 苏ICP备16019405号
