--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -18,7 +18,7 @@
             <div class="row">
               <div class="col-md-2 col-md-offset-2" >
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
-                    <a id="daisy_release_get_a" onmousemove="alert('We are still working on it. comming soon!')">
+                    <a href="./static/files/installdaisy_el7_noarch.bin">
                         get&nbsp;&nbsp; Release
                     </a>
                 </span>
