--- a/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/getToTry.html
@@ -25,7 +25,7 @@
               </div>
               <div>
                 <span class="badge" style="background:rgb(157, 198, 132) none repeat scroll 0% 0%;">
-                    <a onmousemove="alert('We are still working on install guide document. comming soon!')">
+                    <a href="./static/files/demo_how_to.docx">
                         config & deploy doc
                     </a>
                 </span>
